test_suite/tests/ui/conflict/from-try-from.stderr
error: #[serde(from = "...")] and #[serde(try_from = "...")] conflict with each other
 --> tests/ui/conflict/from-try-from.rs:4:1
  |
3 |   #[derive(Serialize)]
  |            --------- in this derive macro expansion
4 | / #[serde(from = "u64", try_from = "u64")]
5 | | struct S {
6 | |     a: u8,
7 | | }
  | |_^
  |
  = note: this error originates in the derive macro `Serialize` (in Nightly builds, run with -Z macro-backtrace for more info)
